force-app/main/default/objects/Onboarding__c/fields/ACM_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>ACM_Assignment_Date__c</fullName>
    <label>ACM Assignment Date</label>
    <type>Date</type>
</CustomField>