force-app/main/default/objects/Onboarding__c/fields/Activation_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Activation_Confirmed__c</fullName>
    <label>Activation Confirmed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>