force-app/main/default/objects/Onboarding__c/fields/AE_Handover_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>AE_Handover_Reviewed__c</fullName>
    <label>AE Handover Reviewed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>