force-app/main/default/objects/Onboarding__c/fields/ATS_Case_Opened__c.field-meta.xml
<CustomField>
    <fullName>ATS_Case_Opened__c</fullName>
    <label>ATS Case Opened</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>