force-app/main/default/objects/Onboarding__c/fields/Call1_Date__c.field-meta.xml
<CustomField>
    <fullName>Call1_Date__c</fullName>
    <label>Call #1 Date</label>
    <type>Date</type>
</CustomField>