force-app/main/default/objects/Onboarding__c/fields/Call2_Date__c.field-meta.xml
<CustomField>
    <fullName>Call2_Date__c</fullName>
    <label>Call #2 Date</label>
    <type>Date</type>
</CustomField>