force-app/main/default/objects/Onboarding__c/fields/Call3_Date__c.field-meta.xml
<CustomField>
    <fullName>Call3_Date__c</fullName>
    <label>Call #3 Date</label>
    <type>Date</type>
</CustomField>