force-app/main/default/objects/Onboarding__c/fields/Close_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Off_Date__c</fullName>
    <label>Close-Off Date</label>
    <description>Day 0 + 90 calendar days</description>
    <formula>Day0_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Date</type>
</CustomField>