force-app/main/default/objects/Onboarding__c/fields/Current_Day__c.field-meta.xml
<CustomField>
    <fullName>Current_Day__c</fullName>
    <label>Current Day</label>
    <description>Calendar days since Day 0</description>
    <formula>IF(ISBLANK(Day0_Date__c), NULL, TODAY() - Day0_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>