force-app/main/default/objects/Onboarding__c/fields/Current_Phase__c.field-meta.xml
<CustomField>
    <fullName>Current_Phase__c</fullName>
    <label>Current Phase</label>
    <formula>IF(ISBLANK(Day0_Date__c), "Pre-Phase",
IF(Current_Day__c &lt;= 7, "Phase 1",
IF(Current_Day__c &lt;= 30, "Phase 2",
IF(Current_Day__c &lt;= 60, "Phase 3",
IF(Current_Day__c &lt;= 90, "Phase 4", "Completed")))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>