force-app/main/default/objects/Onboarding__c/fields/Customer_Context_Validated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Context_Validated__c</fullName>
    <label>Customer Context Validated</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>