force-app/main/default/objects/Onboarding__c/fields/Day0_Date__c.field-meta.xml
<CustomField>
    <fullName>Day0_Date__c</fullName>
    <label>Day 0 Date</label>
    <type>Date</type>
</CustomField>