force-app/main/default/objects/Onboarding__c/fields/F2F_Date__c.field-meta.xml
<CustomField>
    <fullName>F2F_Date__c</fullName>
    <label>F2F Date</label>
    <type>Date</type>
</CustomField>