force-app/main/default/objects/Onboarding__c/fields/F2F_Format__c.field-meta.xml
<CustomField>
    <fullName>F2F_Format__c</fullName>
    <label>F2F Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>In-Person</fullName><default>false</default><label>In-Person</label></value>
            <value><fullName>Virtual - TL Approved</fullName><default>false</default><label>Virtual - TL Approved</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>