force-app/main/default/objects/Onboarding__c/fields/Gate_1_Validated__c.field-meta.xml
<CustomField>
    <fullName>Gate_1_Validated__c</fullName>
    <label>Gate 1 Validated</label>
    <formula>AE_Handover_Reviewed__c &amp;&amp; Customer_Context_Validated__c &amp;&amp; Tech_Setup_Path_Confirmed__c &amp;&amp; ATS_Case_Opened__c &amp;&amp; Ownership_Next_Steps_Clear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>