force-app/main/default/objects/Onboarding__c/fields/Health_Status_Final__c.field-meta.xml
<CustomField>
    <fullName>Health_Status_Final__c</fullName>
    <label>Health Status Final</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Green</fullName><default>false</default><label>Green</label></value>
            <value><fullName>Yellow</fullName><default>false</default><label>Yellow</label></value>
            <value><fullName>Red</fullName><default>false</default><label>Red</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>