force-app/main/default/objects/Onboarding__c/fields/IHC1_Date__c.field-meta.xml
<CustomField>
    <fullName>IHC1_Date__c</fullName>
    <label>IHC #1 Date</label>
    <type>Date</type>
</CustomField>