force-app/main/default/objects/Onboarding__c/fields/Intro_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Date__c</fullName>
    <label>Intro Call Date</label>
    <type>Date</type>
</CustomField>