force-app/main/default/objects/Onboarding__c/fields/Intro_Followup_Sent__c.field-meta.xml
<CustomField>
    <fullName>Intro_Followup_Sent__c</fullName>
    <label>Intro: Followup &amp; Journey Plan Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>