force-app/main/default/objects/Onboarding__c/fields/Intro_Journey_Preview_Done__c.field-meta.xml
<CustomField>
    <fullName>Intro_Journey_Preview_Done__c</fullName>
    <label>Intro: Journey Preview Given</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>