force-app/main/default/objects/Onboarding__c/fields/Intro_Kickoff_Aligned__c.field-meta.xml
<CustomField>
    <fullName>Intro_Kickoff_Aligned__c</fullName>
    <label>Intro: Kickoff Tentatively Aligned</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>