force-app/main/default/objects/Onboarding__c/fields/Intro_Warm_Intro_Done__c.field-meta.xml
<CustomField>
    <fullName>Intro_Warm_Intro_Done__c</fullName>
    <label>Intro: Warm Intro &amp; ACM Positioning</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>