force-app/main/default/objects/Onboarding__c/fields/Kampagneabnahme_Call_Quality__c.field-meta.xml
<CustomField>
    <fullName>Kampagneabnahme_Call_Quality__c</fullName>
    <label>Kampagneabnahme Call Quality</label>
    <type>Picklist</type>
    <inlineHelpText>Quality rating of the Kampagneabnahme call (1 = Poor, 5 = Excellent).</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Poor</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Below Average</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Average</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Good</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Excellent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>