force-app/main/default/objects/Onboarding__c/fields/Kampagneabnahme_Date__c.field-meta.xml
<CustomField>
    <fullName>Kampagneabnahme_Date__c</fullName>
    <label>Kampagneabnahme Date</label>
    <type>DateTime</type>
    <inlineHelpText>Date and time when the Kampagneabnahme (campaign acceptance) call was conducted with the customer.</inlineHelpText>
</CustomField>