force-app/main/default/objects/Onboarding__c/fields/Kickoff_Date_Tentative__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Date_Tentative__c</fullName>
    <label>Kickoff Date (Tentative)</label>
    <type>Date</type>
</CustomField>