force-app/main/default/objects/Onboarding__c/fields/Onboarding_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Satisfaction_Score__c</fullName>
    <label>Onboarding Satisfaction Score</label>
    <description>0-10 scale, from Demodesk or manual entry</description>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>