force-app/main/default/objects/Onboarding__c/fields/Ownership_Next_Steps_Clear__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Next_Steps_Clear__c</fullName>
    <label>Ownership &amp; Next Steps Clear</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>