force-app/main/default/objects/Onboarding__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <label>90-Day Review Date</label>
    <type>Date</type>
</CustomField>