force-app/main/default/objects/Onboarding__c/fields/Review_Format__c.field-meta.xml
<CustomField>
    <fullName>Review_Format__c</fullName>
    <label>Review Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Video</fullName><default>false</default><label>Video</label></value>
            <value><fullName>Onsite</fullName><default>false</default><label>Onsite</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>