force-app/main/default/objects/Onboarding__c/fields/Review_SS_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Review_SS_Confirmed__c</fullName>
    <label>Review SS Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>