force-app/main/default/objects/Onboarding__c/fields/Self_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Self_Check_Completed__c</fullName>
    <label>70-Day Self-Check Completed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>