force-app/main/default/objects/Onboarding__c/fields/Self_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Self_Check_Date__c</fullName>
    <label>70-Day Self-Check Date</label>
    <type>Date</type>
</CustomField>