force-app/main/default/objects/Onboarding__c/fields/SLA_Adherence_Score__c.field-meta.xml
<CustomField>
    <fullName>SLA_Adherence_Score__c</fullName>
    <label>SLA Adherence Score</label>
    <description>Percentage of touchpoints completed within their SLA window</description>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>