force-app/main/default/objects/Onboarding__c/fields/Success_Plan__c.field-meta.xml
<CustomField>
    <fullName>Success_Plan__c</fullName>
    <label>Success Plan</label>
    <referenceTo>Success_Plan__c</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>