force-app/main/default/objects/Onboarding__c/fields/Support_Channels_Explained__c.field-meta.xml
<CustomField>
    <fullName>Support_Channels_Explained__c</fullName>
    <label>Support Channels Explained</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>