force-app/main/default/objects/Onboarding__c/fields/Tech_Setup_Path_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Tech_Setup_Path_Confirmed__c</fullName>
    <label>Tech Setup Path Confirmed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>