force-app/main/default/objects/Onboarding__c/fields/TL_Gate_Date__c.field-meta.xml
<CustomField>
    <fullName>TL_Gate_Date__c</fullName>
    <label>TL Gate Date</label>
    <type>Date</type>
</CustomField>