force-app/main/default/objects/Onboarding__c/fields/TL_Gate_Readiness__c.field-meta.xml
<CustomField>
    <fullName>TL_Gate_Readiness__c</fullName>
    <label>TL Gate Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes - Ready</fullName><default>false</default><label>Yes - Ready</label></value>
            <value><fullName>No - Must-Close Items Open</fullName><default>false</default><label>No - Must-Close Items Open</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>