force-app/main/default/objects/Onboarding__c/fields/TL_Gate_Result__c.field-meta.xml
<CustomField>
    <fullName>TL_Gate_Result__c</fullName>
    <label>TL Gate Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Conditional</fullName><default>false</default><label>Conditional</label></value>
            <value><fullName>Escalate</fullName><default>false</default><label>Escalate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>