force-app/main/default/objects/Onboarding__c/fields/Touchpoint_Calendar_Set__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Calendar_Set__c</fullName>
    <label>Touchpoint Calendar Set</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>